--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>rock-paper-scissor</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="./app.js" defer></script>
+  <link rel="stylesheet" href="./assets/css/reset.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <script src="./assets/app.js" defer></script>
 </head>
 <body>
   <section class="game">
@@ -17,7 +18,7 @@
       </div>
       <div class="computer-score">
         <h2 class="computer-score">Computer</h2>
-        <p class="js-computer-scire">0</p>
+        <p class="js-computer-score">0</p>
       </div>
     </div>
 
@@ -30,8 +31,8 @@
   <section class="fight">
     <h2 class="fight-title">Choose an option</h2>
     <div class="kind-hands">
-      <img src="./img/rock.png" class="player-hand">
-      <img src="./img/rock.png" class="computer-hand">
+      <img src="./assets/img/rock.png" class="player-hand">
+      <img src="./assets/img/rock.png" class="computer-hand">
     </div>
     <div class="options">
       <button class="rock">rock</button>
